--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "vue": "2.4.2"
+    "vue": "2.4.2",
+    "firebase" : "6.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
